[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "theophanie_utils"
version = "1.2.2"
description = "Some utils (starting the app, ...) for the Theophanie Project"
authors = [
    { name = "Panda", email = "panda@delmasweb.net" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "logger",
    "settings"
]
keywords = ["theophanie"]
urls = { Homepage = "https://github.com/Pier4413/PythonUtils" }

[tool.setuptools.packages.find]
where = ["."]
